ingress-nginx.yaml
# ingress ingress-nginx.yaml
# an ingress proven to work with k3s and traefik by default

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
  labels:
    app: nginx
  name: nginx
  namespace: test
spec:
  rules:
  - host: testlab.bupd.xyz # Change by your domain
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - testlab.bupd.xyz # Change by your domain
    secretName: testlab-tls-cert
